@@ -4,6 +4,10 @@ module God
     class Always < PollCondition
       attr_accessor :what
       
+      def initialize
+        self.info = "always"
+      end
+      
       def valid?
         valid = true
         valid &= complain("Attribute 'what' must be specified", self) if self.what.nil?
