@@ -1,5 +1,0 @@
-require File.dirname(__FILE__) + '/helper'
-
-class TestHttpResponseCode < Test::Unit::TestCase
-  
-end
